PGCK-422 code clean up